@@ -22,6 +22,12 @@ Sven Axelsson
 
 
 
+BUG HUNTERS/SUGGESTIONS
+
+Erlend Aasland
+
+
+
 Release 2.6
 ***********
 
