@@ -1,3 +1,9 @@
+2005-07-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/define-markup-commands.scm (justify-field): add. 
+
+	* scm/define-grobs.scm (all-grob-descriptions): decrease font size.
+
 2005-07-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/lookup.cc (filled_box): express filled_box with
